--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Instantiate Ubuntu VM & Execute Test Playbook
-      run: vagrant up
+      - name: Install Vagrant
+        run: |
+          wget -O - https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+          sudo apt update && sudo apt install vagrant -y
+      - name: Install Virtualbox
+        run: |
+          sudo apt-get install virtualbox -y
+        id: vagrant-install
+      - uses: actions/checkout@v4
+      - name: Instantiate Ubuntu VM & Execute Test Playbook
+        run: vagrant up
