--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,7 +9,7 @@ interpreter_python = /usr/local/bin/python3
 
 host_key_checking = False
 private_key_file = .vagrant/machines/default/virtualbox/private_key
-log_path = /Users/siggnation/Documents/ansible-vagrant/.logs/ansible.log
+log_path = /var/log/ansible.log
 module_name = shell
 
 # set plugin path directories here, separate with colons
