--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ on:
       - main
 
 jobs:
-  ansible-ci-test:
+  # Job #1
+  install-vagrant:
     runs-on: ubuntu-latest
-
     steps:
       - name: Install Vagrant
         run: |
@@ -22,6 +22,15 @@ jobs:
         run: |
           sudo apt-get install virtualbox -y
         id: vagrant-install
+
+  # Job #2
+  ansible-playbook-test:
+    env:
+      PY_COLORS: '1'
+      ANSIBLE_FORCE_COLOR: '1'
+    runs-on: ubuntu-latest
+    needs: vagrant-install
+    steps:
       - uses: actions/checkout@v4
       - name: Instantiate Ubuntu VM & Execute Test Playbook
         run: vagrant up
