--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,11 @@ jobs:
           wget -O - https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
           sudo apt update && sudo apt install vagrant -y
+        id: vagrant-install
       - name: Install Virtualbox
         run: |
           sudo apt-get install virtualbox -y
-        id: vagrant-install
+        id: virtualbox-install
 
   # Job #2
   ansible-playbook-test:
@@ -29,7 +30,7 @@ jobs:
       PY_COLORS: '1'
       ANSIBLE_FORCE_COLOR: '1'
     runs-on: ubuntu-latest
-    needs: vagrant-install
+    needs: install-vagrant
     steps:
       - uses: actions/checkout@v4
       - name: Instantiate Ubuntu VM & Execute Test Playbook
