--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,10 @@ on:
 
 jobs:
   # Job #1
-  install-vagrant:
+  Ansible-Playbook-Test:
+    env:
+      PY_COLORS: '1'
+      ANSIBLE_FORCE_COLOR: '1'
     runs-on: ubuntu-latest
     steps:
       - name: Install Vagrant
@@ -23,15 +26,6 @@ jobs:
         run: |
           sudo apt-get install virtualbox -y
         id: virtualbox-install
-
-  # Job #2
-  ansible-playbook-test:
-    env:
-      PY_COLORS: '1'
-      ANSIBLE_FORCE_COLOR: '1'
-    runs-on: ubuntu-latest
-    needs: install-vagrant
-    steps:
       - uses: actions/checkout@v4
-      - name: Instantiate Ubuntu VM & Execute Test Playbook
+      - name: Execute Ansible Test Playbook
         run: vagrant up
