--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'playbooks/**'
   pull_request:
     branches:
       - main
+    paths:
+      - 'playbooks/**'
 
 jobs:
   # Job #1
