update dir triggers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,12 @@ on:
     branches:
       - main
     paths:
-      - 'playbooks/**'
+      - 'ansible/playbooks/**'
   pull_request:
     branches:
       - main
     paths:
-      - 'playbooks/**'
+      - 'ansible/playbooks/**'
 
 jobs:
   # Job #1
