--- a/ansible/inventory/inv.yml
+++ b/ansible/inventory/inv.yml
@@ -2,7 +2,6 @@
 all:
   hosts:
     vagrant-ubuntu:
-      ansible_port: 2222
-      ansible_host: localhost
+      ansible_host: 192.168.100.10
       ansible_python_interpreter: /usr/bin/python3
 ...
