--- a/.github/workflows/docker_ubuntu_custom.yml
+++ b/.github/workflows/docker_ubuntu_custom.yml
@@ -54,6 +54,7 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+
       - name: Inject SSH key
         run: |
           mkdir -p ~/.ssh
@@ -73,7 +74,7 @@ jobs:
       # Check SSH connection
       - name: Test SSH connection
         run: |
-          sshpass -p "${{ secrets.SSH_PRIVATE_KEY }}" ssh -o StrictHostKeyChecking=no root@localhost -p 2222 "echo SSH connected"
+          ssh -i "${{ secrets.SSH_PRIVATE_KEY }}" -o StrictHostKeyChecking=no root@localhost -p 2222 "echo SSH connected"
           sleep 3
           whoami && pwd
 
