--- a/.github/workflows/docker_ubuntu_custom.yml
+++ b/.github/workflows/docker_ubuntu_custom.yml
@@ -61,14 +61,12 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Debug Key
-        run: |
-          echo "SSH_PASSWORD is set: ${{ secrets.SSH_PRIVATE_KEY != '' }}"
-
       # Build image
       - name: Docker Build
         run: |
-          sudo docker build --build-arg SSH_PRIVATE_KEY="${{ secrets.SSH_PRIVATE_KEY }}" -t docker-ubuntu-test-img .
+          docker build --build-arg SSH_PRIVATE_KEY="${{ secrets.SSH_PRIVATE_KEY }}" \
+                       --build-arg SSH_PUBLIC_KEY="${{ secrets.SSH_PUBLIC_KEY }}" \
+                       -t docker-ubuntu-test-img 
 
       # Run container
       - name: Docker Run
