--- a/.github/workflows/docker_ubuntu_custom.yml
+++ b/.github/workflows/docker_ubuntu_custom.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           docker buildx build --build-arg SSH_PRIVATE_KEY="${{ secrets.SSH_PRIVATE_KEY }}" \
                        --build-arg SSH_PUBLIC_KEY="${{ secrets.SSH_PUBLIC_KEY }}" \
-                       -t docker-ubuntu-test-img 
+                       -t docker-ubuntu-test-img .
 
       # Run container
       - name: Docker Run
