--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run ansible-lint
         uses: ansible/ansible-lint@main
         with:
-          args: ""
+          args: --syntax-check
           setup_python: "true"
           working_directory: ./ansible
           requirements_file: requirements.yml
