--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -18,3 +18,6 @@ jobs:
           setup_python: "true"
           working_directory: ./ansible
           requirements_file: requirements.yml
+      - name: Action Event Summary
+        run: |
+          echo "### Hello world! :rocket:" >> $GITHUB_STEP_SUMMARY
