--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -21,3 +21,4 @@ jobs:
       - name: Action Event Summary
         run: |
           echo "### Hello world! :rocket:" >> $GITHUB_STEP_SUMMARY
+    continue-on-error: true
