--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -18,7 +18,10 @@ jobs:
           setup_python: "true"
           working_directory: ./ansible
           requirements_file: requirements.yml
+    continue-on-error: true
+  action-summary:
+    runs-on: ubuntu-24.04
+    steps:
       - name: Action Event Summary
         run: |
           echo "### Hello world! :rocket:" >> $GITHUB_STEP_SUMMARY
-    continue-on-error: true
