--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -12,16 +12,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run ansible-lint
+        id: lint
         uses: ansible/ansible-lint@main
         with:
           args: --force-color
           setup_python: "true"
           working_directory: ./ansible
           requirements_file: requirements.yml
-    continue-on-error: true
+        continue-on-error: true
+        run: |
+          lint_output=$(ansible-lint ./ansible || true)
+          echo "$lint_output" > lint_output.txt
+          echo "lint_result=$lint_output" >> $GITHUB_OUTPUT
+
   action-summary:
+    needs: lint
     runs-on: ubuntu-24.04
     steps:
-      - name: Action Event Summary
+      - name: Workflow Job Summary
         run: |
-          echo "### Hello world! :rocket:" >> $GITHUB_STEP_SUMMARY
+          echo "### Ansible Lint Results" >> $GITHUB_STEP_SUMMARY
+          echo "$(cat ${{ needs.lint.outputs.lint_result }})" >> $GITHUB_STEP_SUMMARY
