--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -25,8 +25,10 @@ jobs:
         id: set_output
         run: |
           lint_output=$(ansible-lint ./ansible --force-color || true)
-          echo "$lint_output" >> $GITHUB_OUTPUT
+          echo "$lint_output" >> "$GITHUB_OUTPUT"
         continue-on-error: true
+    outputs:
+      lint_output: ${{ steps.set_output.outputs }}
 
   job-summary:
     needs: lint
@@ -34,4 +36,4 @@ jobs:
     steps:
       - name: Workflow Job Summary
         run: |
-          echo "${{ needs.lint.jobs.lint.steps.set_output.outputs.lint_output }}" >> $GITHUB_STEP_SUMMARY
+          echo ${{ needs.lint.outputs.lint_output }} >> $GITHUB_STEP_SUMMARY
