--- a/.github/workflows/ansible_lint.yml
+++ b/.github/workflows/ansible_lint.yml
@@ -25,9 +25,7 @@ jobs:
       - name: Set Output
         id: set_output
         run: |
-          lint_output=$(ansible-lint ./ansible || true)  # Handle exit code 2
-          
-          echo "Raw lint output: $lint_output"
+          lint_output=$(ansible-lint ./ansible || true)
 
           lint_output_filtered=$(echo "$lint_output" | grep -v "No new line character" | grep -v "Error:")
 
@@ -41,18 +39,24 @@ jobs:
           echo "### Ansible Lint Results" | tee -a $GITHUB_STEP_SUMMARY $OUTPUT_FILE
           echo "$lint_output_filtered" | tee -a $GITHUB_STEP_SUMMARY $OUTPUT_FILE
           
-          echo "lint_result=$lint_output" >> "$GITHUB_OUTPUT"
+          lint_output_encoded=$(echo "$lint_output_filtered" | base64)
+          
+          echo "lint_result=$lint_output_encoded" >> "$GITHUB_OUTPUT"
         continue-on-error: true
 
   job-summary:
     needs: lint
     runs-on: ubuntu-24.04
     steps:
-      - name: Test output of OUTPUT_FILE since GITHUB_STEP_SUMMARY was printing empty
+      - name: Decode lint_result output
         run: |
-          cat lint_output.txt
+          # Decode the base64 output
+          decoded_lint_result=$(echo "${{ needs.lint.outputs.lint_result }}" | base64 --decode)
+          
+          # Show the decoded result to verify the lint results
+          echo "$decoded_lint_result"
 
       - name: Workflow Job Summary
         run: |
           echo "### Ansible Lint Results" >> $GITHUB_STEP_SUMMARY
-          echo "${{ needs.lint.outputs.lint_result }}" >> $GITHUB_STEP_SUMMARY
+          echo "${{ needs.lint.outputs.lint_result }}" | base64 --decode >> $GITHUB_STEP_SUMMARY
